--- a/fullr/src/components/Signup.css
+++ b/fullr/src/components/Signup.css
@@ -1,34 +1,137 @@
 .signUp {
-    color: rgb(179, 53, 53);
+    color: rgb(0, 0, 0);
     display: flex;
     text-decoration: none;
     justify-content: center;
-    padding-top: 4rem;
+    padding-top: 11rem;
     height: 100%;
     font-size: 1.2cm;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
     
 }
 
+.enterValue{
+    display: flex;
+    color: rgb(0, 0, 0) 118); 
+    margin: 0 auto;
+    align-self: center;
+    font-size: 13pt;
+    text-align: center;
+    height: 14h;
+    padding-left: 12vh;
+    padding-top: 0.7vh;
+    line-height: 2em;
+    width: 50em;
+}
+
 
 
 .firstName {
-    color: rgb(199, 39, 39);
+    color: rgb(75, 148, 118);
     display: flex;
     justify-content: center;
-    padding-bottom: rem;
-    padding-top: 2rem;
+    padding-bottom: 0.3rem;
+    padding-top: 3rem;
     height: 100%;
-    font-size: 0.656cm;
+    font-size: 17pt;
     
 }
 
-.enterValue{
+
+.lastName {
+    color: rgb(75, 148, 118);
     display: flex;
-    color: rgb(199, 39, 39); 
+    justify-content: center;
+    padding-top: 0.8rem;
+    height: 100%;
+    font-size: 17pt;
+    padding-bottom: 0.3rem;
+    
+    
+}
+
+.address {
+    color: rgb(75, 148, 118);
+    display: flex;
+    justify-content: center;
+    padding-bottom: 0.3rem;
+    padding-top: 0.5rem;
+    height: 100%;
+    font-size: 17pt;
+    
+}
+
+.postalCode {
+    color: rgb(75, 148, 118);
+    display: flex;
+    justify-content: center;
+    padding-bottom: 0.3rem;
+    padding-top: 2rem;
+    height: 100%;
+    font-size: 17pt;
+    
+}
+
+.emailAddress {
+    color: rgb(75, 148, 118);
+    display: flex;
+    justify-content: center;
+    padding-bottom: 0.3rem;
+    padding-top: 2rem;
+    height: 100%;
+    font-size: 17pt;
+    
+}
+
+.phoneNumber {
+    color: rgb(75, 148, 118);
+    display: flex;
+    justify-content: center;
+    padding-bottom: 0.3rem;
+    padding-top: 2rem;
+    height: 100%;
+    font-size: 17pt;
+    
+}
+
+
+
+.password {
+    color: rgb(75, 148, 118);
+    display: flex;
+    justify-content: center;
+    padding-bottom: 0.3rem;
+    padding-top: 2rem;
+    height: 100%;
+    font-size: 17pt;
+    
+}
+
+.confirmPassword {
+    color: rgb(75, 148, 118);
+    display: flex;
+    justify-content: center;
+    padding-bottom: 0.3rem;
+    padding-top: 2rem;
+    height: 100%;
+    font-size: 17pt;
+    
+}
+
+
+.submitButton{
+    color: rgb(0, 0, 0);
+    text-align: center;
+    justify-content: center;
     margin: 0 auto;
-    align-self: center;
-    height: 14h;
-    padding-left: 12vh;
-    padding-top: 0vh;
+    display: flex;
+    height: 100%;
+    font-size: 13pt;
+    padding-top: 7pt;
+    padding-left: 17pt;
+    padding-right: 17pt;
+    padding-bottom: 7pt;
+
+
+    
 }
